[gd_scene load_steps=4 format=3 uid="uid://c2n3o4p5q6r7s"]

[ext_resource type="Script" path="res://scripts/basic/enemy/base_enemy.gd" id="1_zombie"]
[ext_resource type="Texture2D" uid="uid://n7yvxoovl8fr" path="res://assets/dinoCharactersVersion1.1/sheets/DinoSprites - mort.png" id="2_texture"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_zombie"]
radius = 8.0
height = 20.0

[node name="ZombieDino" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_zombie")
max_health = 40.0
damage = 10.0
move_speed = 20.0
attack_cooldown = 5.0
attack_range = 18.0
detection_range = 100.0
enemy_name = "Зомби-дино"

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(2.0, 2.0)
texture = ExtResource("2_texture")
region_enabled = true
region_rect = Rect2(0, 0, 24, 24)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_zombie")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.3, 0.3, 1)
offset_left = -20.0
offset_top = -35.0
offset_right = 20.0
offset_bottom = -30.0
max_value = 40.0
value = 40.0
show_percentage = false

[node name="HealthText" type="Label" parent="."]
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = -15.0
text = "40/40"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="."]
offset_left = -30.0
offset_top = -50.0
offset_right = 30.0
offset_bottom = -40.0
text = "Зомби-дино"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MouseArea" type="Area2D" parent="."]

[node name="MouseCollision" type="CollisionShape2D" parent="MouseArea"]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_zombie")